--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,10 +13,13 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8|^2.7"
+python = "^3.7|^3.8|^3.9|^2.7"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.4"
+pytest = "^4.6"
+mock = "^3.0"
+pytest-coverage = "^0.0"
 
 [tool.poetry.scripts]
 uchecker = 'uchecker:main'
