--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,17 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8|^2.7"
-
-[tool.poetry.dev-dependencies]
-flake8 = "^3.8.4"
+python = "^3.6|^3.7|^3.8|^3.9|^2.7"
 
 [tool.poetry.scripts]
 uchecker = 'uchecker:main'
 
+
+[tool.poetry.dev-dependencies]
+flake8 = "^3.8.4"
+pytest = "^4.6"
+pytest-cov = "^2.11.1"
+mock = "^3"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
