--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ uchecker = 'uchecker:main'
 flake8 = "^3.9.2"
 pytest = "^4.6.11"
 pytest-cov = "^2.12.1"
+mock = "^3.0.5"
+mock = "*"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
