--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,17 +13,21 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6|^3.7|^3.8|^3.9|^2.7"
+python = "^3.6|^3.7|^3.8|^3.9|^2.7|^3.10"
 
 [tool.poetry.scripts]
 uchecker = 'uchecker:main'
 
 
 [tool.poetry.dev-dependencies]
-flake8 = "^3.8.4"
-pytest = "^4.6"
-pytest-cov = "^2.11.1"
-mock = "^3"
+pytest = [
+    {version = "^4.6", python = "~2.7"},
+    {version = "^7.0", python = ">=3.5"}
+]
+flake8 = "^3.9.2"
+pytest-cov = "*"
+mock = "*"
+more-itertools = "*"
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
