Disable github action running on ubuntu
Signed-off-by: Rinat Sabitov <rinat.sabitov@gmail.com>

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   tests:
     name: Tests on ${{ matrix.python-version }}
-    runs-on: ubuntu-latest
+      #runs-on: ubuntu-latest
 
     strategy:
       matrix:
