--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -10,11 +10,11 @@ on:
 jobs:
   tests:
     name: Tests on ${{ matrix.python-version }}
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
 
     strategy:
       matrix:
-        python-version: ["2.7", "3.6", "3.7", "3.8", "3.9", "3.10"]
+        python-version: ["2.7.18", "3.6.15", "3.7.16", "3.8.16", "3.9.16", "3.10.11"]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,6 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel poetry
+          poetry config experimental.new-installer false
           poetry install
       - name: Do lint
         run: |
