--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -14,7 +14,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["2.7.18", "3.6.15", "3.7.16", "3.8.16", "3.9.16", "3.10.11"]
+        python-version: ["2.7.18", "3.5.10", "3.6.15", "3.7.16", "3.8.16", "3.9.16", "3.10.11"]
 
     steps:
       - uses: actions/checkout@v3
