--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6|^3.7|^3.8|^3.9|^2.7|^3.10"
+python = "^3.5|^3.6|^3.7|^3.8|^3.9|^2.7|^3.10"
 
 [tool.poetry.scripts]
 uchecker = 'uchecker:main'
