--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel poetry
-          poetry config experimental.new-installer false
+          poetry config experimental.new-installer false ||:
           poetry install
       - name: Do lint
         run: |
