--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -32,7 +32,7 @@ jobs:
 
     strategy:
       matrix:
-        python-version: ["3.5.10", "3.6.15", "3.7.16", "3.8.16", "3.9.16", "3.10.11", "3.11.6", "3.12.0"]
+        python-version: ["3.5.10", "3.6.15", "3.7.16", "3.8.16", "3.9.16", "3.10.11", "3.11.6"]
 
     steps:
       - uses: actions/checkout@v3
