--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -8,13 +8,31 @@ on:
     branches: [master, main]
 
 jobs:
+  deprecated-tests-py27:
+    name: Tests on 2.7.18
+    runs-on: ubuntu-20.04
+    container:
+      image: python:2.7.18-buster
+    steps:
+      - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip setuptools wheel poetry
+          poetry config experimental.new-installer false ||:
+          poetry install
+      - name: Do lint
+        run: |
+          poetry run flake8 --max-line-length 120 --ignore=E721 .
+      - name: Do tests
+        run: |
+          poetry run pytest --cov uchecker -v
   tests:
     name: Tests on ${{ matrix.python-version }}
     runs-on: ubuntu-20.04
 
     strategy:
       matrix:
-        python-version: ["2.7.18", "3.5.10", "3.6.15", "3.7.16", "3.8.16", "3.9.16", "3.10.11"]
+        python-version: ["3.5.10", "3.6.15", "3.7.16", "3.8.16", "3.9.16", "3.10.11", "3.11.6"]
 
     steps:
       - uses: actions/checkout@v3
@@ -24,7 +42,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel poetry
-          poetry config experimental.new-installer false
+          poetry config experimental.new-installer false ||:
           poetry install
       - name: Do lint
         run: |
