--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ pytest = [
 ]
 flake8 = "^3.9.2"
 pytest-coverage = "*"
-mock = "*"
+mock = { version = "*", markers = "python_version < '3.3'" }
 more-itertools = "*"
 
 [build-system]
