--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,4 +1,3 @@
----
 name: CI
 
 on:
@@ -9,12 +8,12 @@ on:
 
 jobs:
   deprecated-tests-py27:
-    name: Tests on 2.7.18
-    runs-on: ubuntu-20.04
+    name: Tests on Python 2.7.18
+    runs-on: ubuntu-latest 
     container:
       image: python:2.7.18-buster
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel poetry
@@ -26,23 +25,24 @@ jobs:
       - name: Do tests
         run: |
           poetry run pytest --cov uchecker -v
+
   tests:
-    name: Tests on ${{ matrix.python-version }}
-    runs-on: ubuntu-20.04
+    name: Tests on Python ${{ matrix.python-version }}
+    runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ["3.5.10", "3.6.15", "3.7.16", "3.8.16", "3.9.16", "3.10.11", "3.11.6"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip setuptools wheel poetry
-          poetry config experimental.new-installer false ||:
           poetry install
       - name: Do lint
         run: |
@@ -50,4 +50,3 @@ jobs:
       - name: Do tests
         run: |
           poetry run pytest --cov uchecker -v
-
