--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -9,19 +9,18 @@ on:
 jobs:
   deprecated-tests-py27:
     name: Tests on Python 2.7.18
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-latest
     container:
       image: python:2.7.18-buster
     steps:
       - uses: actions/checkout@v4
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel poetry
-          poetry config experimental.new-installer false ||:
+          python -m pip install --upgrade pip setuptools wheel "poetry==1.1.15"
           poetry install
       - name: Do lint
         run: |
-          poetry run flake8 --max-line-length 120 --ignore=E721 .
+          poetry run flake8 .
       - name: Do tests
         run: |
           poetry run pytest --cov uchecker -v
@@ -33,11 +32,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.5", "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
@@ -46,7 +46,7 @@ jobs:
           poetry install
       - name: Do lint
         run: |
-          poetry run flake8 --max-line-length 120 --ignore=E721 .
+          poetry run flake8 .
       - name: Do tests
         run: |
           poetry run pytest --cov uchecker -v
