--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,17 +18,25 @@ python = "^3.5|^3.6|^3.7|^3.8|^3.9|^2.7|^3.10"
 [tool.poetry.scripts]
 uchecker = 'uchecker:main'
 
-
 [tool.poetry.dev-dependencies]
 pytest = [
     {version = "^4.6", python = "~2.7"},
-    {version = "^6.0", python = "~3.5"},
+    {version = "^6.2", python = "~3.5"},
     {version = "^7.0", python = ">=3.6"}
 ]
-flake8 = "^3.9.2"
+flake8 = [
+    {version = "<3.8", python = "~2.7"},    # flake8 v3.7.9 is the last for Py2.7
+    {version = "<3.9", python = "~3.5"},    # flake8 v3.8.4 is the last for Py3.5
+    {version = "^3.9.2", python = ">=3.6"} # v3.9.2 works on Py3.6+
+]
 pytest-coverage = "*"
-mock = "*"
-more-itertools = "*"
+mock = { version = "*", python = "~2.7" }
+more-itertools = [
+    {version = "<8.6.0", python = "~3.5"},   # v8.5.0 is the last to support Py3.5
+    {version = "*", python = ">=3.6"}
+]
+functools32 = { version = "*", python = "~2.7" }
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
