--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -7,32 +7,38 @@ on:
     branches: [master, main]
 
 jobs:
-  deprecated-tests-py27:
-    name: Tests on Python 2.7.18
-    runs-on: ubuntu-latest
-    container:
-      image: python:2.7.18-buster
-    steps:
-      - uses: actions/checkout@v4
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools wheel "poetry==1.1.15"
-          poetry install
-      - name: Do lint
-        run: |
-          poetry run flake8 .
-      - name: Do tests
-        run: |
-          poetry run pytest --cov uchecker -v
-
-  tests:
+  tests-legacy:
     name: Tests on Python ${{ matrix.python-version }}
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.5", "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["2.7", "3.5", "3.6", "3.7"]
+
+    container:
+      image: python:${{ matrix.python-version }}-slim-buster
+
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install "poetry==1.4.2"
+          poetry install
+      - name: Do lint
+        run: poetry run flake8 .
+      - name: Do tests
+        run: poetry run pytest --cov uchecker -v
+
+  tests-modern:
+    name: Tests on Python ${{ matrix.python-version }}
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
@@ -42,11 +48,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel poetry
+          pip install --upgrade pip poetry
           poetry install
       - name: Do lint
-        run: |
-          poetry run flake8 .
+        run: poetry run flake8 .
       - name: Do tests
-        run: |
-          poetry run pytest --cov uchecker -v
+        run: poetry run pytest --cov uchecker -v
