--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,9 @@ pytest = [
 flake8 = [
     {version = "<3.8", python = "~2.7"},
     {version = "<3.9", python = "~3.5"},
-    {version = "^5.0", python = ">=3.6"}
+    {version = "^4.0", python = "~3.6"},
+    {version = "^5.0", python = "~3.7"},
+    {version = "^6.0", python = ">=3.8.1"}
 ]
 pytest-coverage = "*"
 mock = { version = "*", python = "~2.7" }
