Attempt to switch to uv

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -7,50 +7,31 @@ on:
     branches: [master, main]
 
 jobs:
-  tests-legacy:
+  tests:
     name: Tests on Python ${{ matrix.python-version }}
     runs-on: ubuntu-latest
 
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["2.7", "3.5", "3.6", "3.7"]
-
-    container:
-      image: python:${{ matrix.python-version }}-slim-buster
+        python-version: ["2.7", "3.5", "3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - uses: actions/checkout@v4
-      - name: Install dependencies
-        run: |
-          pip install --upgrade pip
-          pip install "poetry==1.1.15"
-          poetry install
-      - name: Do lint
-        run: poetry run flake8 .
-      - name: Do tests
-        run: poetry run pytest --cov uchecker -v
 
-  tests-modern:
-    name: Tests on Python ${{ matrix.python-version }}
-    runs-on: ubuntu-latest
-
-    strategy:
-      fail-fast: false
-      matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
-
-    steps:
-      - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Install uv
+        run: pip install uv
+
       - name: Install dependencies
-        run: |
-          pip install --upgrade pip poetry
-          poetry install
+        run: uv pip install '.[dev]'
+
       - name: Do lint
-        run: poetry run flake8 .
+        run: uv run flake8 .
+
       - name: Do tests
-        run: poetry run pytest --cov uchecker -v
+        run: uv run pytest --cov uchecker -v
