--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -20,16 +20,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      
       - name: Install uv
         run: pip install uv
-        
       - name: Install dependencies
         run: uv pip install '.[dev]'
-        
-      - name: Do lint
-        run: uv run flake8 .
-        
+      - name: Run linter
+        run: uv run ruff check .
       - name: Do tests
         run: uv run pytest --cov uchecker -v
 
@@ -43,20 +39,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-          
       - name: Install uv
         run: pip install uv
-        
       - name: Install dependencies
         run: uv pip install '.[dev]'
-        
-      - name: Do lint
-        run: uv run flake8 .
-        
+      - name: Run linter
+        run: uv run ruff check .
       - name: Do tests
         run: uv run pytest --cov uchecker -v
