--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -32,6 +32,9 @@ jobs:
       - name: Install dependencies from locked file
         run: python -m pip install -r requirements-dev.txt
 
+      - name: Install flake8
+        run: python -m pip install flake8
+
       - name: Run linter
         run: flake8 --max-line-length 120 --ignore=E721 .
 
