--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,6 @@ authors = [
 ]
 license = { text = "GPL-2.0-only" }
 readme = "README.md"
-homepage = "https://kernelcare.com/"
-repository = "https://github.com/cloudlinux/kcare-uchecker"
 keywords = ["security-audit", "shared-libraries", "security-scanner", "security-tools", "secutiry"]
 requires-python = ">=2.7"
 
@@ -17,10 +15,9 @@ dependencies = []
 [project.scripts]
 uchecker = "uchecker:main"
 
+# Add this section for your test dependencies
 [project.optional-dependencies]
 dev = [
     "pytest",
-    "pytest-coverage",
-    "flake8",
+    "pytest-cov",
 ]
-
