--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,5 +1,4 @@
----
-name: CI
+name: Build and Test
 
 on:
   push:
@@ -8,46 +7,39 @@ on:
     branches: [master, main]
 
 jobs:
-  deprecated-tests-py27:
-    name: Tests on 2.7.18
-    runs-on: ubuntu-20.04
-    container:
-      image: python:2.7.18-buster
-    steps:
-      - uses: actions/checkout@v3
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools wheel poetry
-          poetry config experimental.new-installer false ||:
-          poetry install
-      - name: Do lint
-        run: |
-          poetry run flake8 --max-line-length 120 --ignore=E721 .
-      - name: Do tests
-        run: |
-          poetry run pytest --cov uchecker -v
-  tests:
-    name: Tests on ${{ matrix.python-version }}
-    runs-on: ubuntu-20.04
-
+  build-and-test:
+    name: Test on Python ${{ matrix.python-version }}
+    runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
-        python-version: ["3.5.10", "3.6.15", "3.7.16", "3.8.16", "3.9.16", "3.10.11", "3.11.6"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }} and cache dependencies
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip setuptools wheel poetry
-          poetry config experimental.new-installer false ||:
-          poetry install
-      - name: Do lint
-        run: |
-          poetry run flake8 --max-line-length 120 --ignore=E721 .
-      - name: Do tests
-        run: |
-          poetry run pytest --cov uchecker -v
+          cache: 'pip'
+          cache-dependency-path: requirements-dev.txt
 
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
+
+      - name: Install dependencies from locked file
+        run: python -m pip install -r requirements-dev.txt
+
+      - name: Install flake8
+        run: python -m pip install flake8
+
+      - name: Install 
+        run: pip install -e .
+
+      - name: Run linter
+        run: flake8 --max-line-length 120 --ignore=E721 .
+
+      - name: Run tests
+        run: pytest --cov uchecker -v
